test roberta wc

--- a/code/test_roberta_wc.ipynb
+++ b/code/test_roberta_wc.ipynb
@@ -49,60 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataclasses import dataclass\n",
-    "from common import get_markdown_cells, get_code_cells, split_into_batches\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "import torch.nn as nn\n",
-    "from transformers import RobertaTokenizer, RobertaModel\n",
-    "import random\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
-    "from state import State\n",
-    "\n",
-    "from roberta_model_wc import LearnSample\n",
-    "\n",
-    "\n",
-    "def gen_learn_samples(state: State, seed=12345):\n",
-    "    random.seed(seed)\n",
-    "    print('Generating sample on train nbs.')\n",
-    "    samples = []\n",
-    "    df = state.cur_train_nbs\n",
-    "    nbs = df.index.get_level_values(0).unique()\n",
-    "    print('Total nbs:', len(nbs))\n",
-    "\n",
-    "    for nb_id in tqdm(nbs):\n",
-    "        nb = df.loc[nb_id]\n",
-    "        correct_order = state.df_orders[nb_id]\n",
-    "        markdown_cells = get_markdown_cells(nb)\n",
-    "        code_cells = get_code_cells(nb)\n",
-    "        code_texts = []\n",
-    "        for cell_id in correct_order:\n",
-    "            if cell_id in code_cells:\n",
-    "                code_texts.append(nb.loc[cell_id]['source'])\n",
-    "\n",
-    "        for pos, cell_id in enumerate(correct_order):\n",
-    "            if cell_id in markdown_cells:\n",
-    "                relative_position = (pos + 0.5) / len(correct_order)\n",
-    "                samples.append(LearnSample(\n",
-    "                    text=nb.loc[cell_id]['source'], relative_position=relative_position, code_texts=code_texts))\n",
-    "\n",
-    "    samples.sort(key=lambda x: len(x.text))\n",
-    "    result = split_into_batches(samples, state.config.batch_size)\n",
-    "    random.shuffle(result)\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "dataset = gen_learn_samples(state)\n",
-    "print('Dataset created! Len:', len(dataset))\n"
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -115,13 +62,10 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel()\n",
-    "# model = MyRobertaModel(preload_state=\"roberta-model-1k.bin\")\n",
+    "model = MyRobertaModel(preload_state=\"roberta-wc-model-1k.bin\")\n",
+    "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
-    "\n",
-    "\n",
-    "roberta_model_wc.train(state, model, dataset, save_to_wandb=True)\n",
-    "print('Model created')"
+    "print('Model loaded')"
    ]
   },
   {
@@ -130,7 +74,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"1k\")"
+    "from tqdm import tqdm\n",
+    "import metric\n",
+    "from metric import Score\n",
+    "from common import get_code_cells, get_markdown_cells\n",
+    "from dataclasses import dataclass\n",
+    "import wandb\n",
+    "from roberta_model_wc import LearnSample\n",
+    "\n",
+    "@dataclass\n",
+    "class OneCell:\n",
+    "    score: float\n",
+    "    cell_id: str\n",
+    "    cell_type: str\n",
+    "\n",
+    "\n",
+    "def predict_order(state: State, nb, model: MyRobertaModel):\n",
+    "    code_cells = get_code_cells(nb)\n",
+    "    markdown_cells = get_markdown_cells(nb)\n",
+    "\n",
+    "    code_texts = []\n",
+    "    for cell_id in code_cells:\n",
+    "        code_texts.append(nb.loc[cell_id]['source'])\n",
+    "                \n",
+    "    samples = list(map(lambda x: LearnSample(text=nb.loc[x]['source'], relative_position=0.0, code_texts=code_texts), markdown_cells))\n",
+    "    scores = model.predict(state, samples)\n",
+    "\n",
+    "    num_code_cells = len(code_cells)\n",
+    "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells, cell_type='markdown') for (cell_id, score) in zip(markdown_cells, scores)] \\\n",
+    "        + [OneCell(cell_id=cell_id, score=pos + 0.5, cell_type='code')\n",
+    "           for (pos, cell_id) in enumerate(code_cells)]\n",
+    "    cells.sort(key=lambda x: x.score)\n",
+    "\n",
+    "    return list(map(lambda x: x.cell_id, cells))\n",
+    "\n",
+    "\n",
+    "def test(state: State, model: MyRobertaModel, save_to_wandb=True):\n",
+    "    print('Start testing model:', model.name)\n",
+    "    if save_to_wandb:\n",
+    "        init_wandb(name='test-model-'+model.name)\n",
+    "    df = state.cur_train_nbs\n",
+    "    all = df.index.get_level_values(0).unique()\n",
+    "    sum_scores = Score(0, 0)\n",
+    "\n",
+    "    for nb_id in tqdm(all):\n",
+    "        nb = df.loc[nb_id]\n",
+    "        my_order = predict_order(state, nb, model)\n",
+    "        score = metric.calc_nb_score(\n",
+    "            my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
+    "\n",
+    "        sum_scores = Score.merge(sum_scores, score)\n",
+    "\n",
+    "        if save_to_wandb:\n",
+    "            wandb.log({'my': sum_scores.cur_score})\n",
+    "\n",
+    "    if save_to_wandb:\n",
+    "        wandb.finish()\n",
+    "\n",
+    "\n",
+    "test(state, model, save_to_wandb=True)\n"
    ]
   }
  ],
