try different params

--- a/code/test_roberta_wc.ipynb
+++ b/code/test_roberta_wc.ipynb
@@ -62,7 +62,7 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel(preload_state=\"roberta-wc-model-1k.bin\")\n",
+    "model = MyRobertaModel(preload_state=\"roberta-wc-model-3k-20cs-5e-5.bin\")\n",
     "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
@@ -117,7 +117,7 @@
     "    all = df.index.get_level_values(0).unique()\n",
     "    sum_scores = Score(0, 0)\n",
     "\n",
-    "    for nb_id in tqdm(all):\n",
+    "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
     "        my_order = predict_order(state, nb, model)\n",
     "        score = metric.calc_nb_score(\n",
@@ -127,6 +127,9 @@
     "\n",
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
+    "            \n",
+    "        if cnt > 300:\n",
+    "            break\n",
     "\n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
