--- a/code/train_roberta_wc.ipynb
+++ b/code/train_roberta_wc.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(1000)"
+    "state.load_train_nbs(30000)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"1k\")"
+    "model.save(\"30k-20cs-5e-5\")"
    ]
   }
  ],
