binary search for code cells len

--- a/code/test_roberta_wc.ipynb
+++ b/code/test_roberta_wc.ipynb
@@ -62,7 +62,7 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel(preload_state=\"roberta-wc-model-3k-20cs-5e-5.bin\")\n",
+    "model = MyRobertaModel(preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
     "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
@@ -128,8 +128,8 @@
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
     "            \n",
-    "        if cnt > 300:\n",
-    "            break\n",
+    "        # if cnt > 300:\n",
+    "            # break\n",
     "\n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
