--- a/code/train_roberta_wc.ipynb
+++ b/code/train_roberta_wc.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs(30000)"
+    "state.load_train_nbs_range(from_=30000, to_=60000)"
    ]
   },
   {
@@ -115,8 +115,8 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel()\n",
-    "# model = MyRobertaModel(preload_state=\"roberta-model-1k.bin\")\n",
+    "# model = MyRobertaModel()\n",
+    "model = MyRobertaModel(preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"30k-20cs-5e-5\")"
+    "model.save(\"60k-bs\")"
    ]
   }
  ],
