two step predictions

--- a/code/train_roberta_wc.ipynb
+++ b/code/train_roberta_wc.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "\n",
     "# model = MyRobertaModel()\n",
-    "model = MyRobertaModel(preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
+    "model = MyRobertaModel(state, preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
