--- a/code/test_roberta_wc.ipynb
+++ b/code/test_roberta_wc.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_tail(1000)"
+    "state.load_train_nbs_tail(5)"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel(preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
+    "model = MyRobertaModel(state, preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
     "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
@@ -98,7 +98,7 @@
     "        code_texts.append(nb.loc[cell_id]['source'])\n",
     "                \n",
     "    samples = list(map(lambda x: LearnSample(text=nb.loc[x]['source'], relative_position=0.0, code_texts=code_texts), markdown_cells))\n",
-    "    scores = model.predict(state, samples)\n",
+    "    scores = model.predict_two_step(state, samples)\n",
     "\n",
     "    num_code_cells = len(code_cells)\n",
     "    cells = [OneCell(cell_id=cell_id, score=score*num_code_cells, cell_type='markdown') for (cell_id, score) in zip(markdown_cells, scores)] \\\n",
@@ -161,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
