fix bugs in graph training

--- a/code/test_roberta_wc.ipynb
+++ b/code/test_roberta_wc.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_tail(5)"
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "from roberta_model_wc import MyRobertaModel\n",
     "\n",
     "\n",
-    "model = MyRobertaModel(state, preload_state=\"roberta-wc-model-30k-20cs-5e-5.bin\")\n",
+    "model = MyRobertaModel(state, preload_state=\"roberta-wc-model-60k-bs.bin\")\n",
     "# model = MyRobertaModel()\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
@@ -112,7 +112,7 @@
     "def test(state: State, model: MyRobertaModel, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
     "    if save_to_wandb:\n",
-    "        init_wandb(name='test-model-'+model.name)\n",
+    "        init_wandb(name='test-model-'+model.name+'two-step-'+roberta_model_wc.get_params())\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "    sum_scores = Score(0, 0)\n",
@@ -128,8 +128,8 @@
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
     "            \n",
-    "        # if cnt > 300:\n",
-    "            # break\n",
+    "        if cnt > 300:\n",
+    "            break\n",
     "\n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
@@ -161,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
