--- a/code/train_graph.ipynb
+++ b/code/train_graph.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=3)"
+    "state.load_train_nbs_range(from_=5000, to_=10000)"
    ]
   },
   {
@@ -126,11 +126,11 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state)\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-cur-final.bin\")\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
-    "graph_model.train(state, model, dataset, save_to_wandb=False)\n",
+    "graph_model.train(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-cur-final.opt.bin\")\n",
     "print('Model created')"
    ]
   },
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"60k-bs\")"
+    "# model.save(\"60k-bs\")"
    ]
   }
  ],
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
