--- a/code/test_graph.ipynb
+++ b/code/test_graph.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_tail(3)"
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=None)\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-15k.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -80,12 +80,24 @@
     "from dataclasses import dataclass\n",
     "import wandb\n",
     "from graph_model import Sample\n",
+    "import numpy as np\n",
     "\n",
     "@dataclass\n",
     "class OneCell:\n",
     "    score: float\n",
     "    cell_id: str\n",
     "    cell_type: str\n",
+    "    \n",
+    "MULT = 5.0\n",
+    "    \n",
+    "# TODO: this doesn't really work. Check what is better option?\n",
+    "def predict_pos_by_scores2(pred):\n",
+    "    softmax = np.exp((pred-np.mean(pred)) * MULT)/np.sum(np.exp((pred-np.mean(pred)) *MULT))\n",
+    "    res = 0.0\n",
+    "    for i in range(len(pred)):\n",
+    "        res += i * softmax[i]\n",
+    "    return res\n",
+    "    \n",
     "\n",
     "def predict_pos_by_scores(scores):\n",
     "    best_score = -1.0\n",
@@ -106,7 +118,7 @@
     "        for code in code_texts:\n",
     "            samples.append(Sample(code=code, markdown=nb.loc[markdown_cell]['source']))\n",
     "\n",
-    "    print('num code cells:', len(code_texts), ', num markdowns:', len(markdown_cells), ', samples:', len(samples))\n",
+    "    # print('num code cells:', len(code_texts), ', num markdowns:', len(markdown_cells), ', samples:', len(samples))\n",
     "    scores = model.predict(state, samples)\n",
     "    positions = []\n",
     "    mul = len(code_texts)\n",
@@ -141,14 +153,15 @@
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
     "            \n",
-    "        if cnt > 300:\n",
+    "        if cnt >= 10:\n",
     "            break\n",
-    "\n",
+    "    print(sum_scores)\n",
+    "            \n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "test(state, model, save_to_wandb=True)\n"
+    "test(state, model, save_to_wandb=False)\n"
    ]
   }
  ],
@@ -174,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
