--- a/code/test_graph.ipynb
+++ b/code/test_graph.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-15k.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-20k-0.5neg.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -88,11 +88,12 @@
     "    cell_id: str\n",
     "    cell_type: str\n",
     "    \n",
-    "MULT = 5.0\n",
+    "MULT = 50.0\n",
     "    \n",
     "# TODO: this doesn't really work. Check what is better option?\n",
     "def predict_pos_by_scores2(pred):\n",
-    "    softmax = np.exp((pred-np.mean(pred)) * MULT)/np.sum(np.exp((pred-np.mean(pred)) *MULT))\n",
+    "    pred2 = [p * MULT for p in pred]\n",
+    "    softmax = (np.exp(pred2) )/np.sum(np.exp(pred2) )\n",
     "    res = 0.0\n",
     "    for i in range(len(pred)):\n",
     "        res += i * softmax[i]\n",
@@ -153,7 +154,7 @@
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
     "            \n",
-    "        if cnt >= 10:\n",
+    "        if cnt >= 300:\n",
     "            break\n",
     "    print(sum_scores)\n",
     "            \n",
@@ -161,7 +162,7 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "test(state, model, save_to_wandb=False)\n"
+    "test(state, model, save_to_wandb=True)\n"
    ]
   }
  ],
