--- a/code/train_graph.ipynb
+++ b/code/train_graph.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=10000, to_=15000)"
+    "state.load_train_nbs_range(from_=15000, to_=20000)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "\n",
     "from graph_model import Sample, SampleWithLabel\n",
     "\n",
-    "negative_sample_prob = 0.05\n",
+    "negative_sample_prob = 0.5\n",
     "\n",
     "END_TOKEN = 'END'\n",
     "\n",
@@ -127,10 +127,12 @@
     "\n",
     "\n",
     "model = MyGraphModel(state, preload_state=\"graph-model-cur-final.bin\")\n",
+    "# model = MyGraphModel(state)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
     "graph_model.train(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-cur-final.opt.bin\")\n",
+    "# graph_model.train(state, model, dataset, save_to_wandb=True)\n",
     "print('Model created')"
    ]
   },
