fix graph2 trainin

--- a/code/test_graph.ipynb
+++ b/code/test_graph.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-20k-0.5neg.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -88,7 +88,7 @@
     "    cell_id: str\n",
     "    cell_type: str\n",
     "    \n",
-    "MULT = 50.0\n",
+    "MULT = 10.0\n",
     "    \n",
     "# TODO: this doesn't really work. Check what is better option?\n",
     "def predict_pos_by_scores2(pred):\n",
@@ -101,7 +101,7 @@
     "    \n",
     "\n",
     "def predict_pos_by_scores(scores):\n",
-    "    best_score = -1.0\n",
+    "    best_score = -10000.0\n",
     "    best_pos = 0.0\n",
     "    for i in range(len(scores)):\n",
     "        if scores[i] > best_score:\n",
@@ -124,7 +124,7 @@
     "    positions = []\n",
     "    mul = len(code_texts)\n",
     "    for i in range(len(markdown_cells)):\n",
-    "        positions.append(predict_pos_by_scores(scores[mul * i:mul * (i + 1)]))\n",
+    "        positions.append(predict_pos_by_scores2(scores[mul * i:mul * (i + 1)]))\n",
     "\n",
     "    num_code_cells = len(code_cells)\n",
     "    cells = [OneCell(cell_id=cell_id, score=p, cell_type='markdown') for (cell_id, p) in zip(markdown_cells, positions)] \\\n",
@@ -154,7 +154,7 @@
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
     "            \n",
-    "        if cnt >= 300:\n",
+    "        if cnt >= 40:\n",
     "            break\n",
     "    print(sum_scores)\n",
     "            \n",
