--- a/code/train_graph2.ipynb
+++ b/code/train_graph2.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "%pip install transformers\n",
-    "%pip install wandb"
+    "%pip install wandb\n",
+    "%pip install pytorch_memlab"
    ]
   },
   {
@@ -63,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=3)"
+    "state.load_train_nbs_range(from_=0, to_=10000)"
    ]
   },
   {
@@ -119,7 +120,7 @@
     "\n",
     "\n",
     "    samples.sort(key=lambda x: x.max_len())\n",
-    "    result = split_into_batches(samples, state.config.batch_size // 2)\n",
+    "    result = split_into_batches(samples, state.config.batch_size_graph2)\n",
     "    random.shuffle(result)\n",
     "    return result\n",
     "\n",
@@ -144,6 +145,8 @@
     "\n",
     "\n",
     "# graph_model.train(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-cur-final.opt.bin\")\n",
+    "\n",
+    "\n",
     "graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
     "print('Model created')"
    ]
@@ -180,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
