fix graph2 test

--- a/code/test_graph.ipynb
+++ b/code/test_graph.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-2-epoch1-maybe.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -89,7 +89,17 @@
     "    cell_type: str\n",
     "    \n",
     "MULT = 10.0\n",
-    "    \n",
+    "\n",
+    "\n",
+    "def predict_pos_by_scores3(pred):\n",
+    "    pred2 = [p * MULT for p in pred]\n",
+    "    softmax = (np.exp(pred2) )/np.sum(np.exp(pred2) )\n",
+    "    scores = [0.0] * len(softmax)\n",
+    "    for i in range(len(softmax)):\n",
+    "        for j in range(len(softmax)):\n",
+    "            scores[j] += abs(i - j) * softmax[i]\n",
+    "    return scores.index(min(scores))\n",
+    "        \n",
     "# TODO: this doesn't really work. Check what is better option?\n",
     "def predict_pos_by_scores2(pred):\n",
     "    pred2 = [p * MULT for p in pred]\n",
@@ -109,7 +119,7 @@
     "            best_pos = i\n",
     "    return best_pos\n",
     "\n",
-    "def predict_order(state: State, nb, model: MyGraphModel):\n",
+    "def predict_order(state: State, nb, model: MyGraphModel, use_sigmoid):\n",
     "    code_cells = get_code_cells(nb)\n",
     "    markdown_cells = get_markdown_cells(nb)\n",
     "\n",
@@ -120,11 +130,11 @@
     "            samples.append(Sample(code=code, markdown=nb.loc[markdown_cell]['source']))\n",
     "\n",
     "    # print('num code cells:', len(code_texts), ', num markdowns:', len(markdown_cells), ', samples:', len(samples))\n",
-    "    scores = model.predict(state, samples)\n",
+    "    scores = model.predict(state, samples, use_sigmoid=use_sigmoid)\n",
     "    positions = []\n",
     "    mul = len(code_texts)\n",
     "    for i in range(len(markdown_cells)):\n",
-    "        positions.append(predict_pos_by_scores2(scores[mul * i:mul * (i + 1)]))\n",
+    "        positions.append(predict_pos_by_scores(scores[mul * i:mul * (i + 1)]))\n",
     "\n",
     "    num_code_cells = len(code_cells)\n",
     "    cells = [OneCell(cell_id=cell_id, score=p, cell_type='markdown') for (cell_id, p) in zip(markdown_cells, positions)] \\\n",
@@ -135,7 +145,7 @@
     "    return list(map(lambda x: x.cell_id, cells))\n",
     "\n",
     "\n",
-    "def test(state: State, model: MyGraphModel, save_to_wandb=True):\n",
+    "def test(state: State, model: MyGraphModel, use_sigmoid, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
     "    if save_to_wandb:\n",
     "        init_wandb(name='test-graph-model-'+model.name)\n",
@@ -145,7 +155,7 @@
     "\n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
-    "        my_order = predict_order(state, nb, model)\n",
+    "        my_order = predict_order(state, nb, model, use_sigmoid=use_sigmoid)\n",
     "        score = metric.calc_nb_score(\n",
     "            my_order=my_order, correct_order=state.df_orders.loc[nb_id])\n",
     "\n",
@@ -162,7 +172,7 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "test(state, model, save_to_wandb=True)\n"
+    "test(state, model, use_sigmoid=False, save_to_wandb=True)\n"
    ]
   }
  ],
