--- a/code/train_graph2.ipynb
+++ b/code/train_graph2.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=10000)"
+    "state.load_train_nbs_range(from_=10000, to_=100000)"
    ]
   },
   {
@@ -139,15 +139,15 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "# model = MyGraphModel(state, preload_state=\"graph-model-cur-final.bin\")\n",
-    "model = MyGraphModel(state)\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
+    "# model = MyGraphModel(state)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
-    "# graph_model.train(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-cur-final.opt.bin\")\n",
+    "graph_model.train2(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-2-cur-final.opt.bin\")\n",
     "\n",
     "\n",
-    "graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
+    "#graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
     "print('Model created')"
    ]
   },
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save(\"60k-bs\")"
+    "model.save(\"2-100k\")"
    ]
   }
  ],
