--- a/code/train_graph2.ipynb
+++ b/code/train_graph2.ipynb
@@ -37,8 +37,7 @@
    "outputs": [],
    "source": [
     "%pip install transformers\n",
-    "%pip install wandb\n",
-    "%pip install pytorch_memlab"
+    "%pip install wandb"
    ]
   },
   {
@@ -64,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=10000, to_=100000)"
+    "state.load_train_nbs_range(from_=0, to_=50000)"
    ]
   },
   {
@@ -139,12 +138,13 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
-    "# model = MyGraphModel(state)\n",
+    "# model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
+    "model = MyGraphModel(state)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
-    "graph_model.train2(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-2-cur-final.opt.bin\")\n",
+    "# graph_model.train2(state, model, dataset, save_to_wandb=True, optimizer_state=\"graph-model-2-cur-final.opt.bin\")\n",
+    "graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
     "\n",
     "\n",
     "#graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"2-100k\")"
+    "# model.save(\"2-100k\")"
    ]
   }
  ],
