--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=5)"
+    "state.load_train_nbs_range(from_=0, to_=15000)"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save(\"2-100k\")"
+    "model.save(\"3-15k\")"
    ]
   }
  ],
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
