--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph3-cur-final.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-3-15k.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -74,9 +74,10 @@
    "outputs": [],
    "source": [
     "from cosine_train import end_token\n",
-    "import np\n",
+    "import numpy as np\n",
     "from common import sim\n",
     "from dataclasses import dataclass\n",
+    "import math\n",
     "@dataclass \n",
     "class Embedding:\n",
     "    cell_id:str\n",
@@ -84,9 +85,9 @@
     "\n",
     "def get_nb_embeddings(state:State, model, nb):\n",
     "    to_convert = [Embedding(cell_id=end_token, text=end_token)]\n",
-    "    for cell_id in nb:\n",
+    "    for cell_id in nb.index:\n",
     "        to_convert.append(Embedding(cell_id=cell_id, text=nb.loc[cell_id]['source']))\n",
-    "    to_convert.sort(key=lambda x:x.text.len())\n",
+    "    to_convert.sort(key=lambda x:len(x.text))\n",
     "\n",
     "    num_chunks = (len(to_convert) + state.config.batch_size - 1) // state.config.batch_size\n",
     "\n",
@@ -96,7 +97,7 @@
     "        encoded = model.encode_texts(state, all_texts)\n",
     "        embeddings = model(input_ids=encoded['input_ids'], attention_mask=encoded['attention_mask'], use_sigmoid=False, return_scalar=False)\n",
     "        for i in range(len(batch)):\n",
-    "            result[batch[i].cell_id] = embeddings[i]\n",
+    "            result[batch[i].cell_id] = embeddings[i].cpu()\n",
     "    return result\n",
     "\n",
     "def find_best_cell_order3_with_emb(nb, embeddings):\n",
@@ -167,9 +168,7 @@
     "\n",
     "        if save_to_wandb:\n",
     "            wandb.log({'my': sum_scores.cur_score})\n",
-    "            \n",
-    "        if cnt >= 40:\n",
-    "            break\n",
+    "\n",
     "    print(sum_scores)\n",
     "            \n",
     "    if save_to_wandb:\n",
@@ -202,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
