fix correct mult + do not recreate batches

--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-3-15k.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
     "model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -101,7 +101,7 @@
     "    return result\n",
     "\n",
     "def find_best_cell_order3_with_emb(nb, embeddings):\n",
-    "    coef_mul = 10.0\n",
+    "    coef_mul = 25.0\n",
     "    \n",
     "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
     "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
