--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=15000)"
+    "state.load_train_nbs_range(from_=0, to_=100000)"
    ]
   },
   {
@@ -65,9 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cosine_train import gen_batches, run_train_all_new\n",
-    "\n",
-    "batches = gen_batches(state)"
+    "from cosine_train import run_train_all_new"
    ]
   },
   {
@@ -87,7 +85,7 @@
     "\n",
     "run_train_all_new(state, model)\n",
     "\n",
-    "model.save('graph3-cur-final')\n",
+    "# model.save('graph3-cur-final')\n",
     "\n",
     "\n",
     "#graph_model.train2(state, model, dataset, save_to_wandb=True)\n",
@@ -100,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"3-15k\")"
+    "# model.save(\"3-15k\")"
    ]
   }
  ],
