fix ensemble testing

--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=100000, to_=101000)\n",
+    "state.load_train_nbs_range(from_=100000, to_=105000)\n",
     "# state.load_train_nbs_tail(1000)"
    ]
   },
@@ -63,8 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "# graph3_model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
-    "graph3_model = MyGraphModel(state)\n",
+    "graph3_model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
     "graph3_model.to(state.device)\n",
     "print('Model loaded')"
    ]
@@ -77,7 +76,7 @@
    "source": [
     "import unixcoder\n",
     "\n",
-    "unixcoder_model = unixcoder.reload_model(state, \"some-model-name.bin\")\n",
+    "unixcoder_model = unixcoder.reload_model(state, \"model-epoch1.5.bin\")\n",
     "print('Unixcoder model loaded')"
    ]
   },
@@ -143,9 +142,11 @@
     "import wandb\n",
     "from graph_model import Sample\n",
     "import numpy as np\n",
+    "import torch\n",
     "\n",
-    "coefs = [z * 0.1 for z in range(10)]\n",
+    "coefs = [z * 0.1 for z in range(11)]\n",
     "\n",
+    "@torch.no_grad()\n",
     "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, use_sigmoid):\n",
     "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
     "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)    \n",
@@ -155,6 +156,8 @@
     "    return res\n",
     "\n",
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, use_sigmoid, save_to_wandb=True):\n",
+    "    graph3_model.eval()\n",
+    "    unixcoder_model.eval()\n",
     "    print('Start testing model:', graph3_model.name)\n",
     "    if save_to_wandb:\n",
     "        init_wandb(name='test-ensemble-graph3-unix')\n",
@@ -167,20 +170,25 @@
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
     "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, use_sigmoid=use_sigmoid)\n",
+    "        to_log = {}\n",
     "        for c in coefs:\n",
     "            score = metric.calc_nb_score(\n",
     "                my_order=my_orders[c], correct_order=state.df_orders.loc[nb_id])\n",
     "            sum_scores[c] = Score.merge(sum_scores[c], score)\n",
-    "            if save_to_wandb:\n",
-    "                wandb.log({'my_train_ensemble-'+str(c): sum_scores[c].cur_score})\n",
+    "            to_log['my_train_ensemble.'+\"{:.1f}\".format(c)] = sum_scores[c].cur_score\n",
+    "        if save_to_wandb:\n",
+    "            wandb.log(to_log)    \n",
     "\n",
-    "    print(sum_scores)\n",
+    "    for c in coefs:\n",
+    "        print(c, ':', sum_scores[c])\n",
     "            \n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "test(state, graph3_model, unixcoder_model, use_sigmoid=False, save_to_wandb=True)\n"
+    "state.config.batch_size = 30\n",
+    "test(state, graph3_model, unixcoder_model, use_sigmoid=False, save_to_wandb=True)\n",
+    "\n"
    ]
   }
  ],
@@ -206,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
