--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -64,6 +64,7 @@
     "\n",
     "model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
     "model.to(state.device)\n",
+    "model.eval()\n",
     "print('Model loaded')"
    ]
   },
