fix ensemble training

--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=100000, to_=105000)\n",
+    "state.load_train_nbs_range(from_=100000, to_=100100)\n",
     "# state.load_train_nbs_tail(1000)"
    ]
   },
@@ -121,32 +121,24 @@
     "    part_code_cells = code_cells / total_cells\n",
     "    \n",
     "    for m_cell_id in markdown_cells['cell_id'].values:\n",
-    "        text = nb[m_cell_id]['source']\n",
+    "        text = nb.loc[m_cell_id]['source']\n",
     "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, m_cell_id, code_cell_ids, 25.0)\n",
     "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, m_cell_id, code_cell_ids, 1000.0)\n",
     "        \n",
     "        graph3_pos = get_best_pos_by_probs(graph_sims_probs)\n",
-    "        unix_pos = get_best_pos_by_probs(graph_sims_probs)\n",
+    "        unix_pos = get_best_pos_by_probs(unix_sims_probs)\n",
     "\n",
-    "        target_pos = correct_order.index(m_cell_id) / len(correct_order) * len(code_cells)\n",
+    "        target_pos = correct_order.index(m_cell_id) / total_cells * code_cells\n",
     "        samples.append(Sample(text=text, graph3_pos=graph3_pos, unix_pos=unix_pos, total_cells=total_cells, md_cells=md_cells, code_cells=code_cells, part_code_cells=part_code_cells, target_pos=target_pos))\n",
     "        \n",
-    "    return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return samples\n",
+    "\n",
     "from tqdm import tqdm\n",
     "import metric\n",
     "from metric import Score\n",
     "from common import get_code_cells, get_markdown_cells, split_into_batches\n",
     "from dataclasses import dataclass\n",
     "import wandb\n",
-    "from graph_model import Sample\n",
     "import numpy as np\n",
     "import torch\n",
     "import random\n",
@@ -168,7 +160,7 @@
     "\n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
-    "        samples += gen_nb_samples(state, nb, graph3_model, unixcoder_model, correct_order=state.df_orders.loc[nb_id])\n",
+    "        samples += gen_samples(state, nb, graph3_model, unixcoder_model, state.df_orders.loc[nb_id])\n",
     "        \n",
     "    return samples\n",
     "\n",
@@ -178,7 +170,6 @@
     "# TODO: do I need this?\n",
     "# state.config.batch_size = 30\n",
     "samples = gen_all_samples(state, graph3_model, unixcoder_model)\n",
-    "\n",
     "\n"
    ]
   },
@@ -188,7 +179,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from torch.optim import AdamW\n",
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "\n",
@@ -211,8 +201,14 @@
     "        texts = list(map(lambda s: s.text, samples))\n",
     "        additional_features = list(map(lambda s: torch.FloatTensor(\n",
     "            [s.graph3_pos, s.unix_pos, s.total_cells, s.md_cells, s.code_cells, s.part_code_cells]), samples))\n",
+    "        additional_features = torch.stack(additional_features).to(state.device)\n",
+    "\n",
     "        to_mul = list(map(lambda s: torch.FloatTensor([s.graph3_pos, s.unix_pos]), samples))\n",
-    "        pred = ensemble_model(texts, additional_features)\n",
+    "        to_mul = torch.stack(to_mul).to(state.device)\n",
+    "\n",
+    "        text_tokens = ensemble_model.encoder.tokenize(texts,max_length=512,mode=\"<encoder-only>\", padding=True)\n",
+    "        text_tokens = torch.tensor(text_tokens).to(state.device)\n",
+    "        pred = ensemble_model(text_tokens, additional_features, state.device)\n",
     "        pred = torch.einsum(\"ab,ab->a\", pred, to_mul)\n",
     "\n",
     "        target = list(map(lambda s: s.target_pos, samples))\n",
@@ -235,7 +231,8 @@
     "\n",
     "ensemble_model = unixcoder.EnsembleModel(\n",
     "    unixcoder.reload_model(state, state_dict=None))\n",
-    "train(state, samples, save_to_wandb=True)\n"
+    "ensemble_model.to(state.device)\n",
+    "train(state, samples, ensemble_model, save_to_wandb=True)\n"
    ]
   }
  ],
@@ -261,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
