testing ensemble model

--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -229,10 +229,49 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "ensemble_model = unixcoder.EnsembleModel(\n",
-    "    unixcoder.reload_model(state, state_dict=None))\n",
+    "ensemble_model = unixcoder.EnsembleModel(state)\n",
     "ensemble_model.to(state.device)\n",
     "train(state, samples, ensemble_model, save_to_wandb=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_ensemble_dataset_score(state: State, samples, ensemble_model, save_to_wandb=True):\n",
+    "    ensemble_model.eval()\n",
+    "    if save_to_wandb:\n",
+    "        init_wandb(name='test-ensemble-dataset')\n",
+    "\n",
+    "    batches = split_into_batches(samples, state.config.batch_size)\n",
+    "\n",
+    "    criterion = torch.nn.L1Loss()\n",
+    "    for samples in tqdm(batches):\n",
+    "        texts = list(map(lambda s: s.text, samples))\n",
+    "        additional_features = list(map(lambda s: torch.FloatTensor(\n",
+    "            [s.graph3_pos, s.unix_pos, s.total_cells, s.md_cells, s.code_cells, s.part_code_cells]), samples))\n",
+    "        additional_features = torch.stack(additional_features).to(state.device)\n",
+    "\n",
+    "        to_mul = list(map(lambda s: torch.FloatTensor([s.graph3_pos, s.unix_pos]), samples))\n",
+    "        to_mul = torch.stack(to_mul).to(state.device)\n",
+    "\n",
+    "        text_tokens = ensemble_model.encoder.tokenize(texts,max_length=512,mode=\"<encoder-only>\", padding=True)\n",
+    "        text_tokens = torch.tensor(text_tokens).to(state.device)\n",
+    "        pred = ensemble_model(text_tokens, additional_features, state.device)\n",
+    "        pred = torch.einsum(\"ab,ab->a\", pred, to_mul)\n",
+    "\n",
+    "        target = list(map(lambda s: s.target_pos, samples))\n",
+    "        target = torch.tensor(target).to(state.device)\n",
+    "\n",
+    "        loss = criterion(pred, target)\n",
+    "\n",
+    "        if save_to_wandb:\n",
+    "            wandb.log({'test-ensemble-loss': loss.item()})\n",
+    "\n",
+    "    if save_to_wandb:\n",
+    "        wandb.finish()    "
    ]
   }
  ],
