save/load ensemble models

--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -231,7 +231,8 @@
     "\n",
     "ensemble_model = unixcoder.EnsembleModel(state)\n",
     "ensemble_model.to(state.device)\n",
-    "train(state, samples, ensemble_model, save_to_wandb=True)\n"
+    "# train(state, samples, ensemble_model, save_to_wandb=True)\n",
+    "print('Done')\n"
    ]
   },
   {
@@ -240,6 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@torch.no_grad()\n",
     "def calc_ensemble_dataset_score(state: State, samples, ensemble_model, save_to_wandb=True):\n",
     "    ensemble_model.eval()\n",
     "    if save_to_wandb:\n",
@@ -247,8 +249,10 @@
     "\n",
     "    batches = split_into_batches(samples, state.config.batch_size)\n",
     "\n",
+    "    sum_losses = 0.0\n",
+    "    \n",
     "    criterion = torch.nn.L1Loss()\n",
-    "    for samples in tqdm(batches):\n",
+    "    for it, samples in enumerate(tqdm(batches)):\n",
     "        texts = list(map(lambda s: s.text, samples))\n",
     "        additional_features = list(map(lambda s: torch.FloatTensor(\n",
     "            [s.graph3_pos, s.unix_pos, s.total_cells, s.md_cells, s.code_cells, s.part_code_cells]), samples))\n",
@@ -266,12 +270,73 @@
     "        target = torch.tensor(target).to(state.device)\n",
     "\n",
     "        loss = criterion(pred, target)\n",
+    "        sum_losses += loss.item()\n",
     "\n",
     "        if save_to_wandb:\n",
-    "            wandb.log({'test-ensemble-loss': loss.item()})\n",
+    "            wandb.log({'test-ensemble-loss': sum_losses / (1 + it)})\n",
     "\n",
     "    if save_to_wandb:\n",
-    "        wandb.finish()    "
+    "        wandb.finish()    \n",
+    "    print('sum losses:', sum_losses)\n",
+    "    print('av loss:', sum_losses / len(batches))\n",
+    "        \n",
+    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(state, samples, ensemble_model, save_to_wandb=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble_model.save('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble_model = unixcoder.EnsembleModel(state, state_dict='ensemble-model-test.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in range(10):\n",
+    "    train(state, samples, ensemble_model, save_to_wandb=False)\n",
+    "    calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=False)"
    ]
   }
  ],
